; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_memory.c_fz_realloc.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_memory.c_fz_realloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FZ_ERROR_MEMORY = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [27 x i8] c"realloc (%zu bytes) failed\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fz_realloc(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i64 %2, i64* %7, align 8
  %8 = load i64, i64* %7, align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %14

10:                                               ; preds = %3
  %11 = load i32*, i32** %5, align 8
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @fz_free(i32* %11, i8* %12)
  store i8* null, i8** %4, align 8
  br label %28

14:                                               ; preds = %3
  %15 = load i32*, i32** %5, align 8
  %16 = load i8*, i8** %6, align 8
  %17 = load i64, i64* %7, align 8
  %18 = call i8* @do_scavenging_realloc(i32* %15, i8* %16, i64 %17)
  store i8* %18, i8** %6, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = icmp ne i8* %19, null
  br i1 %20, label %26, label %21

21:                                               ; preds = %14
  %22 = load i32*, i32** %5, align 8
  %23 = load i32, i32* @FZ_ERROR_MEMORY, align 4
  %24 = load i64, i64* %7, align 8
  %25 = call i32 @fz_throw(i32* %22, i32 %23, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i64 %24)
  br label %26

26:                                               ; preds = %21, %14
  %27 = load i8*, i8** %6, align 8
  store i8* %27, i8** %4, align 8
  br label %28

28:                                               ; preds = %26, %10
  %29 = load i8*, i8** %4, align 8
  ret i8* %29
}

declare dso_local i32 @fz_free(i32*, i8*) #1

declare dso_local i8* @do_scavenging_realloc(i32*, i8*, i64) #1

declare dso_local i32 @fz_throw(i32*, i32, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
